CPG-DEV/src/objects/AccountPlanDetail__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>AccountPlan__c</referenceTo>
        <relationshipLabel>Account Plan Details</relationshipLabel>
        <relationshipName>Account_Plan_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Plan Details</relationshipLabel>
        <relationshipName>Account_Plan_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Profile</label>
        <referenceTo>CustomerProfile__c</referenceTo>
        <relationshipLabel>Account Plan Details</relationshipLabel>
        <relationshipName>Account_Plan_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail_Record__c</fullName>
        <formula>IF(
NOT(ISNULL(Project__c)),
HYPERLINK(&quot;/Project__r.Id&quot;, &quot;Project__r.Name&quot;),
IF(NOT(ISNULL(Strategic_Objective__c)),
HYPERLINK(&quot;/Strategic_Objective__r.Id&quot;, &quot;Strategic_Objective__r.Name&quot;),
IF(NOT(ISNULL(Opportunity__c)),
HYPERLINK(&quot;/Opportunity__r.Id &quot;, &quot;Opportunity__r.ID&quot;)
,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Account Plan Details</relationshipLabel>
        <relationshipName>Account_Plan_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Account Plan Details</relationshipLabel>
        <relationshipName>Account_Plan_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strategic_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic Objective</label>
        <referenceTo>StrategicObjective__c</referenceTo>
        <relationshipLabel>Account Plan Details</relationshipLabel>
        <relationshipName>Account_Plan_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF( Opportunity__c !=&apos;&apos;, &apos;Opportunity&apos;, IF( Contact__c !=&apos;&apos;, &apos;Contact&apos;, IF( Project__c !=&apos;&apos;, &apos;Project&apos;, &apos;Stragetic Objective&apos;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Account Plan Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APD{000000}</displayFormat>
        <label>Account Plan Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>